# Chess

./: .gitignore  BitBoard.h  Board.cpp  Board.h  BoardState.h  CMakeLists.txt  HumanPlayer.h  Player.h  main.cpp  offsets.h
AI/: AIPlayer.h  Evaluation.cpp  Evalutation.h  OpeningBook.h  Searcher.cpp  Searcher.h  TranspositionTable.h
Game/: Board.cpp  Board.h  BoardState.h  FenSaveLoader.h  GameManager.cpp  GameManager.h  GameRunners.cpp  GameRunners.h  MoveNotation.h
Render/: MoveDrawer.h  PieceDrawer.h  StatusIconAtlas.h  uiDrawer.h
Stockfish/: StockfishPlayer.cpp  StockfishPlayer.h
tests/: icon_board_preview.cpp  icon_sheet_test.cpp
